# voxelius1

./: .gitattributes  .gitignore  .itch.toml  CMakeLists.txt  README.md
assets/: CMakeLists.txt
assets/lang/: lang.en_US.json  lang.ru_RU.json
assets/voxels/: cobble.json  glass.json  leaves.json  planks.json  vtest.json  wood.json
common/: CMakeLists.txt  cmdline.cc  cmdline.hh  config.cc  config.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  fstools.cc  fstools.hh  image.cc  image.hh  packet_buffer.cc  packet_buffer.hh  strtools.cc  strtools.hh
config/: cmake.hh.in
game/client/: CMakeLists.txt  background.cc  chat.cc  chat.hh  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  crosshair.cc  game.cc  game.hh  globals.cc  globals.hh  keyboard.cc  keyboard.hh  keynames.cc  keynames.hh  language.cc  language.hh  main.cc  main_menu.cc  message_box.cc  message_box.hh  metrics.cc  mouse.cc  outline.cc  outline.hh  play_menu.cc  player_list.cc  player_target.cc  player_target.hh  progress.cc  progress.hh  receive.cc  screenshot.cc  session.cc  session.hh  (+17 more)
game/client/entity/: player_look.cc  player_move.cc  player_move.hh
game/client/event/: glfw_key.hh  glfw_mouse_button.hh  language_set.hh
game/server/: CMakeLists.txt  chat.cc  chat.hh  game.cc  game.hh  globals.cc  globals.hh  main.cc  receive.cc  sessions.cc  sessions.hh  status.cc
game/shared/: CMakeLists.txt  chunk.cc  chunk.hh  chunk_coord.cc  chunk_coord.hh  chunk_coord_2d.hh  const.hh  game_voxels.cc  game_voxels.hh  globals.cc  globals.hh  local_coord.cc  local_coord.hh  motd.cc  motd.hh  overworld.cc  overworld.hh  protocol.cc  protocol.hh  ray_dda.cc  ray_dda.hh  vdef.cc  vdef.hh  voxel.hh  voxel_coord.cc  voxel_coord.hh  world.cc  world.hh  world_coord.cc  world_coord.hh  worldgen.cc  worldgen.hh
game/shared/entity/: chunk.hh  head.hh  transform.cc  transform.hh  velocity.cc  velocity.hh
game/shared/event/: chunk_create.hh  chunk_remove.hh  chunk_update.hh  voxel_set.hh
launch/: CMakeLists.txt  launch.cc  vclient.rc
libraries/: CMakeLists.txt  LEGAL_NOTICES.txt
libraries/binary/win32/: libcurl.lib
libraries/source/enet/: CMakeLists.txt
libraries/source/fastnoiselite/: CMakeLists.txt
libraries/source/glad/: CMakeLists.txt
libraries/source/imgui/: CMakeLists.txt
libraries/source/miniz/: CMakeLists.txt
libraries/source/parson/: CMakeLists.txt
libraries/source/physfs/: CMakeLists.txt
libraries/source/spdlog/: CMakeLists.txt
libraries/source/stb/: CMakeLists.txt
libraries/win32/: CMakeLists.txt
libraries/win64/: CMakeLists.txt
mathlib/: CMakeLists.txt  common.hh  constexpr.hh  floathacks.hh  mat4x4base.hh  mat4x4f.cc  mat4x4f.hh  vec2base.hh  vec2f.cc  vec2f.hh  vec3angles.cc  vec3angles.hh  vec3base.hh  vec3f.cc  vec3f.hh  vec4base.hh  vec4f.cc  vec4f.hh
package/: config.cmake  package.cmake
source/common/: CMakeLists.txt  config.cc  epoch.cc  fstools.cc  image.cc  image.hh  precompiled.hh
source/common/resource/: binary_file.cc  binary_file.hh  image.cc  image.hh  resource.cc  resource.hh
source/config/: cmake.hh.in
source/game/client/: CMakeLists.txt  background.cc  chat.cc  chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_visibility.cc  chunk_visibility.hh  const.hh  crosshair.cc  discord_rpc.cc  discord_rpc.hh  experiments.cc  experiments.hh  game.cc  game.hh  globals.cc  globals.hh  keyboard.cc  language.cc  login.cc  login.hh  main.cc  main.hh  main_menu.cc  message_box.cc  metrics.cc  mouse.cc  outline.cc  outline.hh  play_menu.cc  player_list.cc  player_target.cc  player_target.hh  precompiled.hh  presence.cc  presence.hh  progress.cc  receive.cc  (+13 more)
source/game/client/entity/: player_move.cc
source/game/client/event/: language_set.hh
source/game/client/gui/: background.cc  chat.cc  crosshair.cc  hotbar.cc  hotbar.hh  main_menu.cc  play_menu.cc  splash.cc
source/game/client/hud/: hotbar.cc  hotbar.hh
source/game/client/resource/: texture2D.cc  texture2D.hh
source/game/client/world/: chunk_mesher.cc  chunk_visibility.cc  player_target.cc  player_target.hh  voxel_atlas.cc
source/game/server/: CMakeLists.txt  chat.cc  game.cc  game.hh  main.cc  main.hh  precompiled.hh  receive.cc  sessions.cc  sessions.hh
source/game/shared/: CMakeLists.txt  chunk.cc  chunk.hh  chunk_coord.cc  chunk_coord_2d.hh  game_voxels.cc  game_voxels.hh  local_coord.cc  overworld.cc  overworld.hh  precompiled.hh  protocol.cc  protocol.hh  ray_dda.cc  ray_dda.hh  setup.cc  universe.cc  universe.hh  vdef.cc  vdef.hh  voxel.hh  voxel_coord.cc  world.cc  world.hh  world_coord.cc  world_coord.hh  worldgen.cc  worldgen.hh
source/game/shared/entity/: chunk.hh  transform.hh
source/game/shared/event/: chunk_create.hh  chunk_remove.hh  chunk_update.hh  voxel_set.hh
source/game/shared/world/: chunk.hh  game_voxels.cc  game_voxels.hh  ray_dda.cc  ray_dda.hh  universe.cc  unloader.cc  unloader.hh  vdef.cc  vdef.hh  world.cc  world.hh
source/game/shared/worldgen/: overworld.cc
source/launch/: CMakeLists.txt  launch.cc  precompiled.hh  vclient.rc  vserver.rc
source/mathlib/: CMakeLists.txt
