cmake_minimum_required(VERSION 3.15)
project(miniz LANGUAGES C VERSION 3.0.2)
add_library(miniz STATIC "${CMAKE_CURRENT_LIST_DIR}/miniz.c")
target_compile_definitions(miniz PUBLIC MINIZ_NO_STDIO MINIZ_NO_ZLIB_COMPATIBLE_NAMES)
target_include_directories(miniz PUBLIC "${LIBRARIES_INCLUDE_DIR}")
set_target_properties(miniz PROPERTIES FOLDER External)
