add_library(shared STATIC
    "${CMAKE_CURRENT_LIST_DIR}/chunk.cc"
    "${CMAKE_CURRENT_LIST_DIR}/chunk.hh"
    "${CMAKE_CURRENT_LIST_DIR}/chunk_coord.cc"
    "${CMAKE_CURRENT_LIST_DIR}/chunk_coord.hh"
    "${CMAKE_CURRENT_LIST_DIR}/chunk_coord_2d.hh"
    "${CMAKE_CURRENT_LIST_DIR}/const.hh"
    "${CMAKE_CURRENT_LIST_DIR}/entity/chunk.hh"
    "${CMAKE_CURRENT_LIST_DIR}/entity/head.hh"
    "${CMAKE_CURRENT_LIST_DIR}/entity/player.hh"
    "${CMAKE_CURRENT_LIST_DIR}/entity/transform.cc"
    "${CMAKE_CURRENT_LIST_DIR}/entity/transform.hh"
    "${CMAKE_CURRENT_LIST_DIR}/entity/velocity.cc"
    "${CMAKE_CURRENT_LIST_DIR}/entity/velocity.hh"
    "${CMAKE_CURRENT_LIST_DIR}/event/chunk_create.hh"
    "${CMAKE_CURRENT_LIST_DIR}/event/chunk_remove.hh"
    "${CMAKE_CURRENT_LIST_DIR}/event/chunk_update.hh"
    "${CMAKE_CURRENT_LIST_DIR}/event/voxel_set.hh"
    "${CMAKE_CURRENT_LIST_DIR}/game_voxels.cc"
    "${CMAKE_CURRENT_LIST_DIR}/game_voxels.hh"
    "${CMAKE_CURRENT_LIST_DIR}/globals.cc"
    "${CMAKE_CURRENT_LIST_DIR}/globals.hh"
    "${CMAKE_CURRENT_LIST_DIR}/local_coord.cc"
    "${CMAKE_CURRENT_LIST_DIR}/local_coord.hh"
    "${CMAKE_CURRENT_LIST_DIR}/motd.cc"
    "${CMAKE_CURRENT_LIST_DIR}/motd.hh"
    "${CMAKE_CURRENT_LIST_DIR}/overworld.cc"
    "${CMAKE_CURRENT_LIST_DIR}/overworld.hh"
    "${CMAKE_CURRENT_LIST_DIR}/precompiled.hh"
    "${CMAKE_CURRENT_LIST_DIR}/protocol.cc"
    "${CMAKE_CURRENT_LIST_DIR}/protocol.hh"
    "${CMAKE_CURRENT_LIST_DIR}/ray_dda.cc"
    "${CMAKE_CURRENT_LIST_DIR}/ray_dda.hh"
    "${CMAKE_CURRENT_LIST_DIR}/setup.hh"
    "${CMAKE_CURRENT_LIST_DIR}/setup.cc"
    "${CMAKE_CURRENT_LIST_DIR}/vdef.cc"
    "${CMAKE_CURRENT_LIST_DIR}/vdef.hh"
    "${CMAKE_CURRENT_LIST_DIR}/voxel.hh"
    "${CMAKE_CURRENT_LIST_DIR}/voxel_coord.cc"
    "${CMAKE_CURRENT_LIST_DIR}/voxel_coord.hh"
    "${CMAKE_CURRENT_LIST_DIR}/world.cc"
    "${CMAKE_CURRENT_LIST_DIR}/world.hh"
    "${CMAKE_CURRENT_LIST_DIR}/worldgen.cc"
    "${CMAKE_CURRENT_LIST_DIR}/worldgen.hh"
    "${CMAKE_CURRENT_LIST_DIR}/world_coord.cc"
    "${CMAKE_CURRENT_LIST_DIR}/world_coord.hh")
target_include_directories(shared PRIVATE "${PROJECT_SOURCE_DIR}/source")
target_include_directories(shared PRIVATE "${PROJECT_SOURCE_DIR}/source/game")
target_precompile_headers(shared PRIVATE "${CMAKE_CURRENT_LIST_DIR}/precompiled.hh")
target_link_libraries(shared PUBLIC emhash enet entt FNL miniz parson thread_pool)
target_link_libraries(shared PUBLIC common)
